# GameSkeleton

./: .gitignore  CMakeLists.txt  main.cpp
game_skeleton/: CMakeLists.txt  Game.cpp  Game.hpp  TimeStep.cpp  TimeStep.hpp  Window.cpp  Window.hpp
tests/: CMakeLists.txt
tests/game_skeleton_tests/: CMakeLists.txt
